# ipService

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
source/: configuration.cpp  console_logger.cpp  downloader.cpp  future_fueatures.cpp  geoBase.cpp  geo_db_checker.cpp  main.cpp  unpacker.cpp  utils.cpp
source/include/: configuration.h  console_logger.h  downloader.h  geoBase.h  geo_db_checker.h  logger.h  unpacker.h  utils.h
